[package]
name = "ccunits-rust"
version = "0.1.0"

[lib]
crate-type=["cdylib", "rlib"]
name="ccunits"
path="src/lib.rs"

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.74"
rust_decimal = "1.16.0"

[profile.release]
opt-level = "s"